crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__the_log_tab_shows_the_newest_lines_with_levels.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│No servers yet. Pr││  Name              Size   Modified   ││  Name              Size   Modified   │"
"│                  ││  ..                                  ││  ..                                  │"
"│                  ││  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│                  ││  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│                  ││  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────┐"
"│13:53:20 INFO  filecargo::session event number 0                                                  │"
"│13:53:21 WARN  filecargo::session event number 1                                                  │"
"│13:53:22 ERROR filecargo::session event number 2                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · g go to · . dotfiles · s sort · F1 help · q quit                                       "
