crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__the_site_editor_shows_validation_errors_and_hides_a_typed_password.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: screen
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│▸ Personal        ││  Name              Size   Modified   ││                                      │"
"│▸ Work            ││  ..                                  ││                                      │"
"│  home-nas        ││  docs/                    09-29 06:00││                                      │"
"│                  ││  src/                     09-28 10:00││                                      │"
"│                  ││  README.md           2.1K 09-29 10:00││                                      │"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                 ┌ New site ────────────────────────────────────────────────────┐                 │"
"│                 │           Name: work                                         │                 │"
"│                 │       Protocol: ‹ SFTP ›                                     │                 │"
"│                 │           Host:                                              │d press Enter.   │"
"│                 │           Port:                                              │                 │"
"│                 │           User:                                              │                 │"
"│                 │          Login: ‹ Password ›                                 │                 │"
"│                 │       Password: •••••••                                      │                 │"
"│                 │Remember secret: [ ]                                          │                 │"
"│                 │     Remote dir:                                              │                 │"
"│                 │      Local dir:                                              │                 │"
"│                 │          Notes:                                              │                 │"
"│                 │                                                              │                 │"
"└─────────────────│Enter a host.                                                 │─────────────────┘"
"┌ Queue (0) │ Comp│                                                              │─────────────────┐"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                      Nothing queued. Select files and press F5 to transfer.                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" q quit  Tab focus                                                                                  "
