crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__the_terminal_tab_draws_the_shell_screen_with_colours_and_the_cursor.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "terminal_screen(TerminalState::Open(shell.view.clone()))"
---
"┌ Servers ─────────┐┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│No servers yet. Pr││  Name              Size   Modified   ││  Name              Size   Modified   │"
"│                  ││  ..                                  ││  ..                                  │"
"│                  ││  docs/                    09-29 06:00││  html/                    09-28 20:00│"
"│                  ││  src/                     09-28 10:00││  index.php           4.3K 09-28 22:00│"
"│                  ││  README.md           2.1K 09-29 10:00││  style.css          12.5K 09-28 22:00│"
"│                  ││  notes.txt            340 09-30 09:00││                                      │"
"│                  ││  big.iso             1.5G 08-24 00:00││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"│                  ││                                      ││                                      │"
"└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────┐"
"│me@prod:~$ ls                                                                                     │"
"│html  index.php  style.css                                                                        │"
"│me@prod:~$ █                                                                                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Ctrl-\ leave · Shift-PgUp scroll · F1 help · q quit                                                "
