crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__too_small_shows_one_message.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                       terminal too small (needs 80x24)                        "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
